--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"luxon": "^3.3.0",
 		"markdown-it-anchor": "^8.6.7"
+	},
+	"dependencies": {
+		"html-minifier": "^4.0.0"
 	}
 }
