--- a/.github/workflows/deploy-to-neocities.yml
+++ b/.github/workflows/deploy-to-neocities.yml
@@ -1,10 +1,9 @@
 name: Deploy to neocities
 
-on: workflow_dispatch
-
-  # push:
-  #   branches:
-  #     - main
+on:
+  push:
+    branches:
+      - main
 
 env:
   FORCE_COLOR: 1
