👷 Update workflow to cleanup

--- a/.github/workflows/deploy-to-neocities.yml
+++ b/.github/workflows/deploy-to-neocities.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Deploy to neocities
       uses: bcomnes/deploy-to-neocities@v1.1.15
       with:
-        cleanup: false
+        cleanup: true
         dist_dir: site
         api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
